<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
    >

        <EditText
        android:id="@+id/editText1"
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/inserire_il_testo_del_file_"
        android:inputType="textMultiLine" >
    </EditText>

    <Spinner
        android:id="@+id/spinModes"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_alignLeft="@+id/editText1"
        android:layout_alignTop="@+id/editText1"
       
         />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="TextView" />
    

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnOpenFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apri" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancella" />

        <Button
            android:id="@+id/btnSaveFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salva" />

        <Button
            android:id="@+id/extAct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tmp" />
    </LinearLayout>

</LinearLayout>